# Arducam_tof_camera

./: .gitignore  CMakeLists.txt  README.md  compile.sh
example/: Makefile  cmake_install.cmake
example/c/: Makefile  cmake_install.cmake
example/cpp/: CMakeLists.txt  Makefile  cmake_install.cmake  face_identifier.cpp
example/python/: insightface_register.py  requirements.txt
open3d_preview/: Makefile  cmake_install.cmake
src/: face_app.cpp
